--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
-    <script type="module" src="https://unpkg.com/wise-desk?module"></script>
+    <script type="module" src="./main.js"></script>
 
     <h1>hello world</h1>
     <wise-desk-chat></wise-desk-chat>
